chore: disable blank issues

--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Propose a new feature for Codex
+description: Propose a new feature for HAPI
 labels:
   - enhancement
 body:
