--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,15 @@ coverage/
 **/*.swo
 
 # Claude local settings
-.claude/settings.local.json
+.claude/
 localdocs/
 execplan/
 
 # Generated npm bundle output (local)
 cli/npm/main/
+
+# cca & ccb
+.ccb_config/
+.autoflow/
+ccb-*.lock
+ccb-msg/
